--- a/css/style.scss
+++ b/css/style.scss
@@ -1,15 +1,16 @@
-/*!
- * Start Bootstrap - Shop Homepage HTML Template (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
 body {
-    padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    padding-top: 20px;  
 }
 
+// Navigation
+.nav img {
+    width: 15%;
+}
+
+
+// Carousel
 .slide-image {
-    width: 100%;
+    width: 50%;
 }
 
 .carousel-holder {
@@ -21,6 +22,21 @@ body {
     border-radius: 4px;
 }
 
+
+//Logo
+
+.lead {
+    font-size: 25px;
+    text-align: center;
+}
+
+.lead img{
+    width: 75%;
+    padding: 5px;
+}
+
+
+// Selections
 .caption {
     height: 130px;
     overflow: hidden;
