--- a/css/style.scss
+++ b/css/style.scss
@@ -10,10 +10,11 @@ body {
 
 // Carousel
 .slide-image {
-    width: 50%;
+    width: 100%;
 }
 
 .carousel-holder {
+    margin-left: 150px;
     margin-bottom: 30px;
 }
 
