--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,11 @@ body {
 }
 
 .slide-image {
-  width: 50%;
+  width: 100%;
 }
 
 .carousel-holder {
+  margin-left: 150px;
   margin-bottom: 30px;
 }
 
