--- a/css/style.scss
+++ b/css/style.scss
@@ -121,9 +121,12 @@ h6 {
 }
 
 .intro-message {
-    position: relative;
+    position:relative;
     padding-top: 20%;
     padding-bottom: 20%;
+    
+    text-align:center;
+    color: black;
 }
 
 .intro-message > h1 {
