--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,14 @@ body {
   padding: 5px;
 }
 
+.col-md-12 {
+  text-align: center;
+}
+
+.col-md-3 {
+  text-align: center;
+}
+
 .caption {
   height: 130px;
   overflow: hidden;
@@ -62,7 +70,14 @@ footer {
   margin: 30px 0;
 }
 
-/* Start Bootstrap - Landing Page Bootstrap Theme (http://startbootstrap.com) */
+.tophead {
+  padding-top: 50px;
+}
+
+.contactHead {
+  margin-top: 66px;
+}
+
 body,
 html {
   width: 100%;
@@ -115,6 +130,10 @@ h6 {
   padding-bottom: 20%;
   text-align: center;
   color: black;
+}
+
+.intro-message h3 {
+  color: #6460ab;
 }
 
 .intro-message > h1 {
