--- a/css/style.css
+++ b/css/style.css
@@ -74,10 +74,6 @@ body {
   white-space: nowrap;
 }
 
-.thumbnail img {
-  width: 100%;
-}
-
 .ratings {
   padding-right: 10px;
   padding-left: 10px;
@@ -86,6 +82,10 @@ body {
 
 .thumbnail {
   padding: 0;
+}
+
+.thumbnail img {
+  width: 100%;
 }
 
 .thumbnail .caption-full {
@@ -126,11 +126,6 @@ h6 {
   font-size: 14px;
 }
 
-.lead {
-  font-size: 18px;
-  font-weight: 400;
-}
-
 .intro-header {
   padding-top: 50px;
   /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
@@ -161,9 +156,10 @@ h6 {
 
 .intro-message h3 {
   color: #6460ab;
+  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
 }
 
-.intro-message > h1 {
+.intro-message h1 {
   margin: 0;
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
   font-size: 5em;
@@ -173,10 +169,6 @@ h6 {
   width: 400px;
   border-top: 1px solid #f8f8f8;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-}
-
-.intro-message > h3 {
-  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
 }
 
 @media (max-width: 767px) {
